--- a/Utumno/utumno.ipynb
+++ b/Utumno/utumno.ipynb
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'\\x18A\\x1aA\\x1cA\\x12A\\x10A\\x12A\\x0cA\\nA8A:A<A\\x02A\\x00A\\x02A\\x0cA\\nA\\x18A\\x1aA\\x1cA\\x12A\\x10A\\x12AlAjA'\n"
+      "b'$A&A A.A$A&A8A>A4A6A0A\\x0eA\\x14A\\x16A\\x18A\\x1eA\\x04A\\x06A\\x00A\\x0eA\\x04A\\x06AxA~A'\n"
      ]
     }
    ],
@@ -168,13 +168,16 @@
     "    input += ((start_index + i) ^ (i * 3)).to_bytes(1, \"big\")\n",
     "    input += target_address[i % 4].to_bytes(1, \"big\")\n",
     "# print(input)\n",
-    "sys.stdout.buffer.write(input)"
+    "try:\n",
+    "    sys.stdout.buffer.write(input)\n",
+    "except AttributeError:\n",
+    "    print(input)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
