--- a/Utumno/utumno.ipynb
+++ b/Utumno/utumno.ipynb
@@ -176,6 +176,29 @@
     "\n",
     "print(struct.pack(\"<I\", 0x804B25C) + b\" \" + struct.pack(\"<I\", 0xFFFFD9F3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'//hh'\n",
+      "b'pips'\n",
+      "b'7on'\n",
+      "b'=GGE'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bytes.fromhex(\"2f2f6868\"))\n",
+    "print(bytes.fromhex(\"70697073\"))  # +48\n",
+    "print(bytes.fromhex(\"376f6e\"))  # +18\n",
+    "print(bytes.fromhex(\"3d474745\"))  # +22"
+   ]
   }
  ],
  "metadata": {
