--- a/Vortex/vortex.ipynb
+++ b/Vortex/vortex.ipynb
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'\\xf7\\xee2\\n'\n",
-      "b'\\xfaP\\x15\\x10'\n",
-      "b'\\x870/-'\n",
-      "b'\\xe2\\x8e\\xbdn'\n",
+      "b'\\xad\\xad\\xf6\\x15'\n",
+      "b'+\\xa9\\xe8='\n",
+      "b'\\x02\\xc8\\xb7b'\n",
+      "b'HI\\x05\\x00'\n",
       "b'Username: vortex1 Password: Gq#qu3bF3'\n"
      ]
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "132"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
